--- a/PhysicsEngine2D/PhysicsEngine2D/PhysicsEngine2D.csproj
+++ b/PhysicsEngine2D/PhysicsEngine2D/PhysicsEngine2D.csproj
@@ -22,6 +22,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -50,16 +51,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Shapes\AABB.cs" />
+    <Compile Include="Math\Matrix2.cs" />
     <Compile Include="Dynamics\Body.cs" />
     <Compile Include="Math\Bounds.cs" />
     <Compile Include="Shapes\Circle.cs" />
     <Compile Include="Collision\Collision.cs" />
     <Compile Include="Collision\Manifold.cs" />
-    <Compile Include="Collision\CollisionSystemSAP.cs" />
+    <Compile Include="Collision\Broad Phase\CollisionSystemSAP.cs" />
     <Compile Include="Math\MathUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scene.cs" />
+    <Compile Include="PhysicsWorld.cs" />
+    <Compile Include="Shapes\Polygon.cs" />
     <Compile Include="Shapes\Shape.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
