--- a/PhysicsEngine2D/PhysicsEngine2D.csproj
+++ b/PhysicsEngine2D/PhysicsEngine2D.csproj
@@ -51,13 +51,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collision\Broadphase\DynamicAABBTree\DynamicAABBTree.cs" />
     <Compile Include="Math\Matrix2.cs" />
     <Compile Include="Dynamics\Body.cs" />
     <Compile Include="Math\Bounds.cs" />
     <Compile Include="Shapes\Circle.cs" />
     <Compile Include="Collision\Collision.cs" />
     <Compile Include="Collision\Manifold.cs" />
-    <Compile Include="Collision\Broad Phase\CollisionSystemSAP.cs" />
+    <Compile Include="Collision\Broadphase\CollisionSystemSAP.cs" />
     <Compile Include="Math\MathUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PhysicsWorld.cs" />
