Added Dynamic AABB Trees for broadphasing with Broadphase abstract base class. Number of densely packed bodies (pyramid) @ 30+ FPS increased from ~850 (with Sweep and Prune) to ~1800 with AABB trees.
Number of impulse resolution iterations decreased from 10 to 7.
Demo app colors changed to black and white.

--- a/PhysicsEngine2D/PhysicsEngine2D.csproj
+++ b/PhysicsEngine2D/PhysicsEngine2D.csproj
@@ -52,11 +52,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collision\Broadphase\DynamicAABBTree\DynamicAABBTree.cs" />
+    <Compile Include="Collision\Broadphase\Broadphase.cs" />
     <Compile Include="Math\Matrix2.cs" />
     <Compile Include="Dynamics\Body.cs" />
     <Compile Include="Math\Bounds.cs" />
     <Compile Include="Shapes\Circle.cs" />
-    <Compile Include="Collision\Collision.cs" />
+    <Compile Include="Collision\CollisionHelper.cs" />
     <Compile Include="Collision\Manifold.cs" />
     <Compile Include="Collision\Broadphase\CollisionSystemSAP.cs" />
     <Compile Include="Math\MathUtil.cs" />
