--- a/PhysicsEngine2D/PhysicsEngine2D.csproj
+++ b/PhysicsEngine2D/PhysicsEngine2D.csproj
@@ -34,10 +34,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MonoGame.Framework, Version=3.4.0.456, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Program Files (x86)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,26 +41,26 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="XNAPrimitives2D, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\C# Projects\MonoGame\XNAPrimitives2D\XNAPrimitives2D\bin\Release\XNAPrimitives2D.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Collision\Broadphase\DynamicAABBTree\DynamicAABBTree.cs" />
+    <Compile Include="Collision\Broadphase\DynamicBoundsTree.cs" />
     <Compile Include="Collision\Broadphase\Broadphase.cs" />
+    <Compile Include="Dynamics\RaycastSolver.cs" />
+    <Compile Include="Dynamics\Transform.cs" />
     <Compile Include="Math\Matrix2.cs" />
     <Compile Include="Dynamics\Body.cs" />
     <Compile Include="Math\Bounds.cs" />
-    <Compile Include="Shapes\Circle.cs" />
-    <Compile Include="Collision\CollisionHelper.cs" />
+    <Compile Include="Dynamics\Shapes\Circle.cs" />
+    <Compile Include="Collision\ContactSolver.cs" />
     <Compile Include="Collision\Manifold.cs" />
-    <Compile Include="Collision\Broadphase\CollisionSystemSAP.cs" />
-    <Compile Include="Math\MathUtil.cs" />
+    <Compile Include="Collision\Broadphase\SweepAndPruneBroadphase.cs" />
+    <Compile Include="Math\Mathf.cs" />
+    <Compile Include="Math\Ray2.cs" />
+    <Compile Include="Math\Vec2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PhysicsWorld.cs" />
-    <Compile Include="Shapes\Polygon.cs" />
-    <Compile Include="Shapes\Shape.cs" />
+    <Compile Include="Common\PhysicsWorld.cs" />
+    <Compile Include="Dynamics\Shapes\Polygon.cs" />
+    <Compile Include="Dynamics\Shapes\Shape.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
