Added Raycasting. Added simple testbed for testing demo scenes.

--- a/PhysicsEngine2D/PhysicsEngine2D.csproj
+++ b/PhysicsEngine2D/PhysicsEngine2D.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="Collision\Broadphase\DynamicBoundsTree.cs" />
     <Compile Include="Collision\Broadphase\Broadphase.cs" />
-    <Compile Include="Dynamics\RaycastSolver.cs" />
+    <Compile Include="Dynamics\RaycastResult.cs" />
     <Compile Include="Dynamics\Transform.cs" />
     <Compile Include="Math\Matrix2.cs" />
     <Compile Include="Dynamics\Body.cs" />
