--- a/PhysicsEngine2D/PhysicsEngine2D.csproj
+++ b/PhysicsEngine2D/PhysicsEngine2D.csproj
@@ -9,9 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PhysicsEngine2D</RootNamespace>
     <AssemblyName>PhysicsEngine2D</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,16 +35,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collision\Broadphase\DynamicBoundsTree.cs" />
-    <Compile Include="Collision\Broadphase\Broadphase.cs" />
+    <Compile Include="Collision\Broadphase\IBroadphase.cs" />
     <Compile Include="Dynamics\RaycastResult.cs" />
     <Compile Include="Dynamics\Transform.cs" />
     <Compile Include="Math\Matrix2.cs" />
@@ -61,6 +55,10 @@
     <Compile Include="Common\PhysicsWorld.cs" />
     <Compile Include="Dynamics\Shapes\Polygon.cs" />
     <Compile Include="Dynamics\Shapes\Shape.cs" />
+    <Compile Include="Debug\IDebugDrawer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Debug\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
